refactor(psama)!: bare typed responses, deprecate queryTemplate, fix /user/me/consents
Delete PICSUREResponse/PicSureResponseBody. Every controller returns its DTO
bare and every failure goes through PicsureException, so PSAMA now emits the
same {errorType, message, requestId} body as the rest of the stack. The
message key is preserved on every error -- it now carries the detail that used
to hide in the envelope's content.

Adds pic-sure-spring-commons: GatewayExceptionAdvice via @Import (as the
operations and query services do) plus RequestIdFilter, so requestId in an
error body is a value a user can quote. The strict-deserialization
autoconfiguration does NOT apply here, because PSAMA's own ObjectMapper bean
makes Boot's Jackson autoconfiguration back off -- and does not need to,
because a plain ObjectMapper is already strict. Documented on ApplicationConfig.

Typed records replace the Maps and raw Strings on the surface:
AuthenticationRequest/AuthenticationResponse (pushed through the four IdP
services, not adapted at the controller), TokenRefreshResponse,
OpenAccessValidationRequest/ValidationResponse, StudyAccessRequest,
ApplicationRefreshTokenResponse, LongTermTokenResponse, CacheContents. Admin
CRUD signatures name the entity they answer with; entities stay on the wire.
Controllers become @RestController so a bare String body is not read as a view
name.

/user/me/consents declared @PathVariable("userId") against a path with no
{userId} template, so it answered 500 to every caller; the user now comes from
the security context, which also retires an ownership check that compared two
UUIDs with reference identity. GET /accessRule/{id} answered 500 for a miss
because its intended 404 was passed as the envelope's content; it is a 404
now. GET /accessRule/allTypes no longer demands a request content type.

queryTemplate is frozen, not retyped: both endpoints keep their JSON-in-String
shapes and are marked @Deprecated pending a successor.

BREAKING: /open/validate a